# robot_manipulator

reading_output/: read_graph.py  read_squares.py
reading_uart_c/: CMakeLists.txt
reading_uart_c/lib/: readUART.h  virables.h
reading_uart_c/src/: main.cpp  readUART.cpp
sending_uart/: sending_uart.ino
